[tool.poetry]
name = "lru"
version = "0.1.0"
description = ""
authors = ["Evgeniy Gribanov <evgeniy.therabbit@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
devtools = "^0.10.0"
black = "^23.1.0"
ruff = "^0.0.257"
mypy = "^1.1.1"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

disallow_untyped_defs = true
strict_optional = false
